--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Prime</title>
   <script src="index.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Itim&family=Raleway:wght@300&display=swap" rel="stylesheet">
   <style>
     html, body {
       display: flex;
@@ -19,6 +19,13 @@
     }
     #verify {
       display: none;
+      text-decoration: none;
+      font-family: 'Itim', cursive;
+      font-size: 18px;
+      color: #8470ff;
+    }
+    #verify:hover {
+      color: #6959cc;
     }
     #container {
       margin-top: 20px;
@@ -54,6 +61,10 @@
     <div>
       <a id="verify" class="check" target="_blank"></a>
     </div>
+  </div>
+
+  <div id="sieve">
+
   </div>
 
 </body>
