--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="container">
     <div id="label">Is prime number?</div>
     <div id="waning">
-      Just numbers greater or equals than 9 and use the explain option with care with big numbers.
+      Use numbers greater or equals than 9. Use the explain option with care with big numbers, I recommend you to use numbers less than 1000.
     </div>
     <input id="number" type="text" autofocus>
     <button id="goCheck" type="button" onclick="onClickCheck()">Check</button>
